--- a/app/src/main/res/layout/review_of_artist_fragment.xml
+++ b/app/src/main/res/layout/review_of_artist_fragment.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.rockaroundapp.viewmodel.ReviewOfArtistViewModel" />
+            type="com.example.rockaroundapp.viewmodel.ArtistReviewsViewModel" />
     </data>
 
     <androidx.core.widget.NestedScrollView
