--- a/app/src/main/res/layout/venue_card.xml
+++ b/app/src/main/res/layout/venue_card.xml
@@ -111,24 +111,34 @@
                     app:layout_constraintTop_toBottomOf="@id/capacity_text">
 
                     <ImageView
+                        android:id="@+id/star1"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_baseline_star_rate_50" />
+                        android:background="@drawable/ic_baseline_star_outline_24" />
 
                     <ImageView
+                        android:id="@+id/star2"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_baseline_star_rate_50" />
+                        android:background="@drawable/ic_baseline_star_outline_24" />
 
                     <ImageView
+                        android:id="@+id/star3"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_baseline_star_rate_50" />
+                        android:background="@drawable/ic_baseline_star_outline_24" />
 
                     <ImageView
+                        android:id="@+id/star4"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_baseline_star_rate_50" />
+                        android:background="@drawable/ic_baseline_star_outline_24" />
+
+                    <ImageView
+                        android:id="@+id/start5"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/ic_baseline_star_outline_24" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
