--- a/app/src/main/res/layout/fragment_review_of_venue.xml
+++ b/app/src/main/res/layout/fragment_review_of_venue.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            tools:context=".view.ReviewOfArtistFragment"
+            tools:context=".view.ReviewOfVenueFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -165,7 +165,7 @@
                 android:id="@+id/reliability_rating_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Reliability Rating"
+                android:text="@string/reliability_rating"
                 app:layout_constraintTop_toBottomOf="@id/atmosphere_review_stars"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="20dp"
@@ -214,7 +214,7 @@
                 android:id="@+id/communication_rating_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Communication Rating"
+                android:text="@string/communication_rating"
                 app:layout_constraintTop_toBottomOf="@id/reliability_review_stars"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="20dp"
