--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/discover_btn"
-        android:title="Discover"
+        android:title="@string/discover"
         android:orderInCategory="1"
         android:icon="@drawable/ic_baseline_search_24" />
 
     <item
         android:id="@+id/map_btn"
-        android:title="Map"
+        android:title="@string/map"
         android:orderInCategory="2"
         android:icon="@drawable/ic_baseline_location_on_24"/>
 
     <item
         android:id="@+id/account_btn"
-        android:title="Account"
+        android:title="@string/account"
         android:orderInCategory="2"
         android:icon="@drawable/ic_baseline_account_circle_24"/>
 </menu>
